8180709: java -javaagent:agent.jar with run-time that does not contain java.instrument prints confusing error

Reviewed-by: cjplummer, sspitsyn